Repair-Billing part completed

--- a/web/src/styles/Repair.css
+++ b/web/src/styles/Repair.css
@@ -147,12 +147,27 @@ h2{
 .Add-new-parts-Form {
   position: fixed;
   z-index: 1;
-  margin: -200px 130px;
+  margin: -275px -600px;
 }
 
 .Add-New-parts-card {
   width: 250px;
   height: 380px;
+  margin: auto;
+  background-color:white;
+  box-shadow:0 0 10px rgba(231, 231, 231, 0.1);
+  border-radius: 4px;
+ 
+}
+.Add-new-parts-Table {
+  position: fixed;
+  z-index: 1;
+  margin: -300px -300px;
+}
+
+.Add-New-parts-card-Table{
+  width: 450px;
+  height: auto;
   margin: auto;
   background-color:white;
   box-shadow:0 0 10px rgba(231, 231, 231, 0.1);
@@ -177,9 +192,7 @@ label {
     padding: 3px 5px;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
-    
-  
+    cursor: pointer; 
   }
 
   button:hover {
