--- a/web/src/styles/Community.css
+++ b/web/src/styles/Community.css
@@ -1,7 +1,120 @@
-.comminity-container{
+.community-container {
     width: 87%;
-    height: 80vh;
-    margin-left :200px;
-    margin-right :20px;
-    margin-top: 200px;
-}
+    height: 100vh;
+    margin-left: 165px;
+    margin-right: 200px;
+    margin-top: 60px;
+    background-color: #f0f0f0; 
+    border: 1px solid #ddd;   
+    padding: 10px;            
+    border-radius: 5px;
+  }
+  
+  h6 {
+    margin-bottom: 10px;
+    border-bottom: 1px solid#cbc7c7;
+  }
+  
+  .div-container {
+    margin-top: 10px;
+  }
+  
+  
+  
+  .left {
+    float: left;
+    width: 49%;
+    height:92vh;
+    background-color: #9c40da; 
+    padding: 10px; 
+    margin-right: 10px; 
+    border-radius: 5px;
+  }
+  
+  .userRatings
+   {
+    width: 100%;
+    background-color: #c5e1a5; 
+    padding: 10px; 
+    border-radius: 5px;
+    margin-bottom: 10px;
+    height: 31%; 
+  }
+  .feedbacks {
+    width: 100%;
+    background-color: #c5e1a5; 
+    padding: 10px; 
+    border-radius: 5px;
+    margin-bottom: 10px;
+    height: 67%; 
+    
+  }
+  .right {
+    float: left;
+    width: 50%; 
+    background-color: #e0f7fa; 
+    padding: 10px; 
+    border-radius: 5px;
+    height:92vh;
+    
+  }
+  .scrollable-container {
+    width:100%; 
+    height: 90%;
+    overflow: auto; 
+    border: none; 
+  }
+
+  .scrollable-container::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  .scrollable-container::-webkit-scrollbar-thumb {
+    background-color: #888;
+  }
+  
+  .scrollable-container::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  .message{
+    background-color: white;
+    padding:10px;
+    font-size: 12px;
+    margin-bottom: 10px;
+  }
+  .post1 {
+    width: 100%;
+    background-color: #c5e1a5; 
+    padding: 10px; 
+    border-radius: 5px;
+    margin-bottom: 10px;
+    height: 67%; 
+    
+    
+  }
+  .scrollable-post {
+    width:100%; 
+    height: 90%;
+    overflow: auto; 
+    border: none; 
+  }
+
+  .scrollable-post::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  .scrollable-post::-webkit-scrollbar-thumb {
+    background-color: #888;
+  }
+  
+  .scrollable-post::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  .posts{
+    background-color: white;
+    padding:10px;
+    font-size: 12px;
+    margin-bottom: 10px;
+  }
+  
+   
