--- a/web/src/styles/Reservation.css
+++ b/web/src/styles/Reservation.css
@@ -12,6 +12,7 @@
     color: #09BEB1;
 }
 
+
 .column-1{
     display:flex;
     flex-direction: column;
@@ -33,6 +34,18 @@
 
 }
 
+.calenderContainer{
+   display: flex;
+    background-color: #EEF2F5;
+   height: 50%;
+}
+
+.reservationContainer{
+   display: flex;
+   flex-direction: column;
+   height: 50%;
+
+}
  .column-3{
     display:flex;
     flex-direction: row;
@@ -51,7 +64,7 @@
     background-color: #EEF2F5;
     margin:10px;
     width:95%;
-    height: 18%;
+    height: 30%;
     border-radius: 5px;
     padding: 10px;
     
