--- a/web/src/styles/Reservation.css
+++ b/web/src/styles/Reservation.css
@@ -36,6 +36,7 @@
 
 .calenderContainer{
    display: flex;
+   flex-direction: row;
     background-color: #EEF2F5;
    height: 50%;
 }
@@ -168,4 +169,21 @@
    width:100%;
    height: 40px;
    border-bottom: 3px solid #EEF2F5 ;
+}
+
+.reservationList-container{
+   display:flex;
+   flex-direction: column;
+   padding: 10px;
+  
+   width:50%;
+
+
+
+}
+.reservationList{
+   color:#09BEB1;
+   padding: 10px;
+   background-color: #ffffff;
+   
 }
