--- a/web/src/styles/Community.css
+++ b/web/src/styles/Community.css
@@ -1,132 +1,240 @@
 .community-container {
-    width: 87%;
-    height: 100vh;
-    margin-left: 165px;
-    margin-right: 200px;
-    margin-top: 60px;
-    background-color: #f0f0f0; 
-    border: 1px solid #ddd;   
-    padding: 10px;            
-    border-radius: 5px;
-  }
-  
-  h6 {
-    margin-bottom: 10px;
-    border-bottom: 1px solid#f0f0f0;
-  }
-  
-  .div-container {
-    margin-top: 10px;
-  }
-  
-  
-  
-  .left {
-    float: left;
-    width: 42%;
-    height:92vh;
-    background-color: #b5bdc1; 
-    padding: 10px; 
-    margin-right: 10px; 
-    border-radius: 5px;
-  }
-  
-  .userRatings
-   {
-    width: 100%;
-    background-color:  #EEF2F5; 
-    padding: 10px; 
-    border-radius: 5px;
-    margin-bottom: 10px;
-    height: 31%; 
-  }
-  .feedbacks {
-    width: 100%;
-    background-color:  #EEF2F5; 
-    padding: 10px; 
-    border-radius: 5px;
-    margin-bottom: 10px;
-    height: 67%; 
-    
-  }
-  .right {
-    float: left;
-    width: 57%; 
-    background-color: #b5bdc1; 
-    padding: 10px; 
-    border-radius: 5px;
-    height:92vh;
-    
-  }
-  .scrollable-container {
-    width:100%; 
-    height: 90%;
-    overflow: auto; 
-    border: none; 
-  }
+  width: 87%;
+  height: 100vh;
+  margin-left: 200px;
+  margin-right: 200px;
+  margin-top: 60px;
+  background-color: #f0f0f0; 
+  border: 1px solid #ddd;   
+  padding: 10px;            
+  border-radius: 5px;
+}
 
-  .scrollable-container::-webkit-scrollbar {
-    width: 8px;
-  }
-  
-  .scrollable-container::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 4px;
-  }
-  
-  .scrollable-container::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
-  }
-  .message{
-    background-color: white;
-    padding:10px;
-    font-size: 12px;
-    margin-bottom: 10px;
-    border:solid 1px #888;
-  }
-  .post1 {
-    width: 100%;
-    background-color: #EEF2F5; 
-    padding: 10px; 
-    border-radius: 5px;
-    margin-bottom: 10px;
-    height: 94%; 
-    
-    
-  }
-  .scrollable-post {
-    width:100%; 
-    overflow: auto; 
-    max-height:32vh;
-    margin-top: 10px; 
-    border:none;
-  }
+h6 {
+  margin-bottom: 10px;
+  border-bottom: 1px solid#f0f0f0;
+}
 
-  .scrollable-post::-webkit-scrollbar {
-    width: 8px;
-  }
+.div-container {
+  margin-top: 10px;
+}
+
+.left {
+  float: left;
+  width: 42%;
+  height:92vh;
+  background-color: #b5bdc1; 
+  padding: 10px; 
+  margin-right: 10px; 
+  border-radius: 5px;
+}
+
+.userRatings
+ {
+  width: 100%;
+  background-color:  #EEF2F5; 
+  padding: 10px; 
+  border-radius: 5px;
+  margin-bottom: 10px;
+  height: 31%; 
+}
+.feedbacks {
+  width: 100%;
+  background-color:  #EEF2F5; 
+  padding: 10px; 
+  border-radius: 5px;
+  margin-bottom: 10px;
+  height: 67%; 
   
-  .scrollable-post::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 4px;
-  }
+}
+.right {
+  float: left;
+  width: 57%; 
+  background-color: #b5bdc1; 
+  padding: 10px; 
+  border-radius: 5px;
+  height:92vh;
   
-  .scrollable-post::-webkit-scrollbar-track {
-    background-color: #f1f1f1;
-  }
-  .posts{
-    background-color:  #fff;
-    padding:10px;
-    font-size: 12px;
-    margin-bottom: 10px;
-    border-radius: 5px ;
-    border: solid 1px #888;
-  }
-  .post {
-    border-radius: 10px;
-    border: 1px solid #ddd;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
+}
+.scrollable-container {
+  width:100%; 
+  height: 90%;
+  overflow: auto; 
+  border: none; 
+}
+
+.scrollable-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollable-container::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+.scrollable-container::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+.message{
+  background-color: white;
+  padding:10px;
+  font-size: 12px;
+  margin-bottom: 10px;
+  border:solid 1px #888;
+}
+
+.post-container {
+  position: relative;
+}
+.file-label,
+.upload-button {
+  display: inline-block;
+  cursor: pointer;
+  padding: 7px;
+  border-radius: 7px;
+  margin-right: 2px;
+  font-size: medium;
+  transition: background-color 0.5s;
+}
+.file-label {
+  background-color: transparent; 
+  color: white;
+  border: white solid 1px;
+  text-align: center;
+  width: 40%;
+}
+.upload-button {
+  background-color: transparent; 
+  color: white;
+  border: white  solid 1px;
+  text-align: center;
+  width: 45%;
+}
+.file-label:hover,
+.upload-button:hover {
+  background-color: #1e282a; 
+  color: white; 
+}
   
-   
+.post-buttons {
+  display: flex;
+  justify-content: space-between;
+  width:26%;
+  margin-bottom: 10px;
+  
+}
+h2{
+  text-align:center;
+  padding: 50px;
+}
+
+.file-input {
+  display: none;
+} 
+
+.selected-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain; 
+}
+.comes {
+  display: flex;
+  gap:10px;
+}
+
+.selected-image-box {
+  width: 60%;
+  height: 40vh; 
+  border: solid white 1px;
+  margin-top: 5px;
+  background-color: #b5bdc1;
+  border-radius: 5px;
+}
+.Details {
+  width: 38%;
+  margin-top: 5px;
+  background-color: #b5bdc1;
+  padding: 20px; 
+  border-radius: 5px; 
+  box-sizing: border-box;
+  border: solid white 1px;
+  text-align: center; 
+}
+.RoundShape {
+  width: 70%; 
+  height: 70%; 
+  background-color: transparent;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid white;
+  overflow: hidden;
+  margin: auto;
+  cursor: pointer;
+  margin-top: 5px;
+}
+.RoundShape button {
+  width: 100%; 
+  height: 100%; 
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 5px 10px;
+  font-size: 14px;
+  text-align: center;
+  transition: background-color 0.5s;
+  
+}
+
+.RoundShape button:hover{
+  background-color: black;
+}
+
+.Details .TextFieldStyles {
+  margin-top: 5px;
+}
+.TextFieldStyles {
+
+font-size: 16px;
+color: white; 
+border-radius: 5px; 
+background-color: transparent;
+}
+
+
+.scrollable-post {
+  width:100%; 
+  overflow: auto; 
+  max-height:32vh;
+  margin-top: 10px; 
+  border:none;
+}
+
+.scrollable-post::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollable-post::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+.scrollable-post::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+.posts{
+  background-color:  #fff;
+  padding:10px;
+  font-size: 12px;
+  margin-bottom: 10px;
+  border-radius: 5px ;
+  border: solid 1px #888;
+}
+.post {
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  margin-bottom: 10px;
+}
