--- a/web/src/styles/Community.css
+++ b/web/src/styles/Community.css
@@ -1,7 +1,7 @@
 .community-container {
   width: 87%;
   height: 100vh;
-  margin-left: 200px;
+  margin-left:200px;
   margin-right: 200px;
   margin-top: 60px;
   background-color: #f0f0f0; 
@@ -123,7 +123,7 @@ h6 {
   margin-bottom: 10px;
   
 }
-h2{
+.com-h2{
   text-align:center;
   padding: 50px;
 }
