--- a/web/src/styles/Cards.css
+++ b/web/src/styles/Cards.css
@@ -1,18 +1,15 @@
-/* Cards.css */
-
 .cards-wrapper {
     display: flex;
     justify-content: space-between;
-    
     height: 150vh;
   }
   
   .card-1 {
-    width: 40%; /* Each card takes up 50% with 10px spacing in between */
-    height: 110vh; /* 70% of screen height */
-    border: 0px solid #ccc; /* Grey outline */
+    width: 40%; 
+    height: 110vh; 
+    border: 0px solid #ccc; 
     border-radius: 2%;
-    box-shadow: 2px 2px 10px #5b4cdda7; /* Small shadow */
+    box-shadow: 2px 2px 10px #5b4cdda7; 
     display: flex;
     flex-direction: column;
     margin:40px;
@@ -21,11 +18,11 @@
   }
   
   .card-2 {
-    width: 40%; /* Each card takes up 50% with 10px spacing in between */
-    height: 110vh; /* 70% of screen height */
-    border: 0px solid #ccc; /* Grey outline */
+    width: 40%; 
+    height: 110vh; 
+    border: 0px solid #ccc; 
     border-radius: 2%;
-    box-shadow: 2px 2px 10px #5b4cdda7; /* Small shadow */
+    box-shadow: 2px 2px 10px #5b4cdda7; 
     display: flex;
     flex-direction: column;
     margin:40px;
