--- a/web/src/styles/Navbar.css
+++ b/web/src/styles/Navbar.css
@@ -9,7 +9,7 @@
   background-color: #fff;
   font-family: Roboto, sans-serif;
   height: 60px;
-  box-shadow: 1px 1px 2px #09BEB1;
+  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12);
   z-index: 2;
 }
 
@@ -22,7 +22,7 @@
 
 .navbar-company-name {
   font-weight: bold;
-  margin-right: auto; /* Push the company name to the right */
+  margin-right: auto;
   margin-left: 10px;
   margin-bottom: 0;
   margin-top: 0;
@@ -30,21 +30,45 @@
 }
 
 .navbar-link-box {
+  margin-left: 20px;
+  height:35px;
+  align-items: center;
+  justify-content: center;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 5px;
-  color: #000000;
+  color: #6b6969;
   border-bottom: 2px solid transparent;
   border-radius: 0px;
   cursor: pointer;
-  margin-left: 20px;
-  transition: color 0.1s cubic-bezier(0.42, 0, 0.58, 1), border-bottom 0.1s ease-in-out,;
+  position: relative;
+  transition: color 0.3s ease, background-color 0.3s ease, box-shadow 0.3s ease; 
 }
 
+.navbar-link-box::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: transparent;
+}
+
+.navbar-link-box:hover {
+  /*background-color: rgba(0, 0, 0, 0.05); /* Add background color on hover */
+}
+
+.navbar-link-box:active {
+ /* background-color: rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); */
+}
 
 .navbar-link-box.active {
   color: #09BEB1;
-  border-bottom: 2px solid #09BEB1;
-  
+  border-bottom-color: #09BEB1;
 }
 
+.navbar-link-box.active::after {
+  background-color: #09BEB1;
+}
