--- a/web/src/styles/Drawer.css
+++ b/web/src/styles/Drawer.css
@@ -45,7 +45,10 @@
   transition: background-color 0.1s ease, color 0.1s ease; 
 }
 
-.link:hover {
-  background-color: #09beb26a;
+.link:hover .list-item{
   
+  }
+.link:hover{
+  background-color: #09beb26a;
 }
+
