--- a/web/src/styles/Request.css
+++ b/web/src/styles/Request.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: row;
     width: 87%;
-    height: 110vh;
+    height: 90vh;
     margin-left :200px;
     margin-right :20px;
     margin-top: 70px;
     background-color: #EEF2F5;
+    overflow: auto;
 }
  .view-request{
     display: flex;
