--- a/web/src/styles/Overview.css
+++ b/web/src/styles/Overview.css
@@ -4,11 +4,35 @@
     margin-left :200px;
     margin-right :20px;
     margin-top: 70px;
+    display:flex;
+    flex-direction: row;
 }
-.overview-tabs-title{
+.overview-col-1{
+    flex:3;
+    height:110%;
     background-color: white;
-    color: aqua;
+    border-radius: 10px;
 }
-.overview-tabs{
+.overview-col-2{
+    flex:1.5;
+    height:110%;
+    margin-left: 10px;
+    margin-right: 10px;
     background-color: white;
+    border-radius: 10px;
+}
+.overview-profile-title{
+    display: flex;
+    padding-left:10px;
+    flex-direction: column;
+    color:rgb(93, 93, 93);  
+}
+.overview-profile-pic-container{
+    width:100%;
+    height:250px;
+    overflow: hidden; 
+}
+.overview-profile-pic{
+    width:100%;
+    height:auto;
 }
