--- a/web/src/styles/Login.css
+++ b/web/src/styles/Login.css
@@ -69,3 +69,10 @@
     margin-left: 50px;
     font-weight: 500;
   }
+
+  .login-back{
+    display:flex;
+    align-items: left;
+    margin-left:30px;
+    padding-top: 3%;
+  }
