--- a/web/src/styles/Reservation.css
+++ b/web/src/styles/Reservation.css
@@ -120,7 +120,8 @@
  .innerColumn-1{
     flex:1;
     margin:10px;
-    padding:5px;
+    
+    font-size: 14px;
     
 
  }
@@ -175,7 +176,7 @@
    display:flex;
    flex-direction: column;
    padding: 10px;
-  
+   overflow: auto;
    width:50%;
 
 
