--- a/web/src/styles/Repair.css
+++ b/web/src/styles/Repair.css
@@ -210,3 +210,82 @@ label {
   margin-bottom: 10px;
   border-radius: 5px;
 }
+.Add-new-bill-Table {
+  position: fixed;
+  z-index: 1;
+  margin: -300px -300px;
+}
+
+.Add-New-bill-card-Table{
+  width: 700px;
+  height: auto;
+  margin: auto;
+  background-color:white;
+  box-shadow:0 0 10px rgba(231, 231, 231, 0.1);
+  border-radius: 4px;
+ 
+}
+
+.invoice-header {
+  border-bottom: 2px solid #333;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+.invoice-header h1 {
+  font-size: 24px;
+  margin: 0;
+}
+.invoice-details {
+  margin-bottom: 20px;
+}
+.invoice-details p {
+  margin: 5px 0;
+}
+.invoice-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+.invoice-table th, .invoice-table td {
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: left;
+}
+.invoice-total {
+  text-align: right;
+  font-weight: bold;
+}
+@media print {
+.RepairPage {
+  margin-left: 0;
+  padding: 0;
+  display: block;
+  font-size: 12px;
+  margin-top: 0;
+}
+.RepairContainer1 {
+  display: none;
+}
+.btn,
+.btnParts,
+.Add-new-Form,
+.Add-new-parts-Form,
+.Add-new-parts-Table,
+.RepairContainer2 h2,
+.button-container,
+.button-container2,
+.close-button,
+.error-message-box {
+  display: none;
+}
+.RepairContainer2 {
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding: 0;
+}
+.RepairDetails td {
+  padding: 5px;
+}
+}
