--- a/web/src/styles/Repair.css
+++ b/web/src/styles/Repair.css
@@ -211,3 +211,8 @@ label {
   border-radius: 5px;
 }
 
+@media print {
+    .RepairContainer1{display:none;}
+    .RepairContainer2{display:none;}
+
+}
