--- a/web/src/styles/Request.css
+++ b/web/src/styles/Request.css
@@ -41,6 +41,7 @@
 
  .accepted-request{
     display: flex;
+    flex-direction: column;
     width: 100%;
     margin-top: 4%;
     margin-bottom: 4%;
@@ -53,6 +54,7 @@
    display: flex;
    width: 96%;
    margin-top: 2%;
+   margin-left: 2%;
    border-radius: 2px;
  }
 
