--- a/web/src/styles/Reservation.css
+++ b/web/src/styles/Reservation.css
@@ -1,18 +1,30 @@
 .container-reservation {
-   width:100vw;
-   height: 100vh;
-    display: flex;
-    flex-direction:  row;
-    background-color: #EEF2F5;
-    margin-top: 60px;
-   
+   display: flex;
+   flex-direction: row;
+   width: 100%;
+   height: 90vh;
+   margin-right :20px;
+   margin-top: 70px;
+   background-color: #EEF2F5;
+   overflow: hidden;
     
 }
 .container-title{
     color: #09BEB1;
 }
 
-
+.res-title{
+   display: flex;
+   font-size: 15;
+   width: 100%;
+   height: 4vh;
+   margin-top: 1.5%;
+   margin-bottom: 2%;
+   color: #09BEB1;
+   background-color: #ffffff;
+   border-bottom: 1px solid #cbc7c7;
+   padding-left: 10px;
+}
 .column-1{
     display:flex;
     flex-direction: column;
@@ -20,7 +32,8 @@
     flex:1;
     height: 100vh;
     margin-left:200px;
-    padding: 10px;
+    padding: 0px;
+    overflow: scroll;
 
 }
 .column-2{
@@ -30,7 +43,7 @@
     flex:1;
     height: 100vh;
     margin-left:10px;
-    padding: 10px;
+    overflow: scroll;  
 
 }
 
@@ -38,13 +51,17 @@
    display: flex;
    flex-direction: row;
     background-color: #EEF2F5;
-   height: 50%;
+   height: 40%;
+   margin-left: 10px;
+   margin-right: 10px;
+
 }
 
 .reservationContainer{
    display: flex;
    flex-direction: column;
    height: 50%;
+   overflow: auto;
 
 }
  .column-3{
