--- a/web/src/styles/Request.css
+++ b/web/src/styles/Request.css
@@ -7,7 +7,7 @@
     margin-right :20px;
     margin-top: 70px;
     background-color: #EEF2F5;
-    overflow: auto;
+    overflow: hidden;
 }
  .view-request{
     display: flex;
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     width: 60%;
-    height:80vh;
+    height:87vh;
     margin-left:20px;
     left: 5%;
     border-radius: 2px;
@@ -178,6 +178,7 @@
 
 .desicion-box {
    display: flex;
+   width:96%;
    justify-content: space-between;
    margin-top: 10px;
    padding: 10px;
